Update sync config and add missing fieldset

--- a/.gitignore
+++ b/.gitignore
@@ -1170,3 +1170,4 @@ wp-content/themes/ncccs/node_modules/yargs-parser/build/lib/string-utils.js
 wp-content/themes/ncccs/node_modules/yargs-parser/build/lib/tokenize-arg-string.js
 wp-content/themes/ncccs/node_modules/yargs-parser/build/lib/yargs-parser-types.js
 wp-content/themes/ncccs/node_modules/yargs-parser/build/lib/yargs-parser.js
+dump.sql.gz
